feat: add diary

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,47 +1,25 @@
 {
+    "PAGES.REGISTRATION.REGISTRATION_BUTTON": "",
+    "PAGES.REGISTRATION.TRANSPLANT_ORGAN_DATE": "Transplantation date",
     "PAGES.SETTINGS.FORM.SELECT_LANGUAGE": "Select Language",
     "PAGES.BUTTONS.SELECT_ONE": "Select One",
-    "SHARED.BUTTONS.OK": "Ok",
-    "PAGES.REGISTRATION.TRANSPLANT_ORGAN": "Transplant Organ",
-    "PAGES.REGISTRATION.BIRTHDAY": "Birthday ",
-    "PAGES.REGISTRATION.PHONE": "Phone",
-    "PAGES.REGISTRATION.CITY": "City",
-    " PAGES.REGISTRATION.CITY": "City",
-    "PAGES.REGISTRATION.COUNTRY": "Country",
+    "SHARED.BUTTONS.CANCEL": "Cancel",
+    "SHARED.BUTTONS.OK": "Save",
+    "PAGES.REGISTRATION.TRANSPLANT_ORGAN": "Translplant Organ",
+    "PAGES.REGISTRATION.CONFIRMATION_PASSWORD": "Confirm Password",
     "PAGES.REGISTRATION.PASSWORD": "Password",
-    "PAGES.REGISTRATION.CONFIRMATION_PASSWORD": "Confirmation Password",
-    " PAGES.REGISTRATION.COUNTRY": "Country",
     "PAGES.REGISTRATION.LAST_NAME": "Last Name",
-    "PAGES.LOGIN.SIGNIN": "Registration",
-    "PAGES.LOGIN.EMAIL": "Email",
     "PAGES.REGISTRATION.FIRST_NAME": "First Name",
     "PAGES.REGISTRATION.EMAIL": "Email",
     "PAGES.REGISTRATION.LOGIN": "Login",
     "SHARED.WORDS.OR": "or",
-    "PAGES.NOT_FOUND.TITLE": "Page doesn't exist",
-    "PAGES.LOGIN.FORGOT_PASSWORD": "Forgot password",
-    "PAGES.LOGIN.PASSWORD": "Password",
-    " PAGES.LOGIN.EMAIL": "Email",
-    "PAGES.LOGIN.REGISTRATION": "Registration",
-    "SHARED.PHRASES.OR": "or ",
-    "PAGES.BLOOD_PRESSURE.CREATE_PRESSURE": "Create new blood pressure",
-    "PAGES.BLOOD_PRESSURE.CALENDAR": "Data",
-    "PAGES.BLOOD_PRESSURE.TABLE.DATA": "Data",
-    "PAGES.BLOOD_PRESSURE.TABLE.HEIGHT_PRESSURE": "Height Pressure",
-    "PAGES.BLOOD_PRESSURE.TABLE.LOW_PRESSURE": "Low Pressure",
-    "PAGES.BLOOD_PRESSURE.TABLE.TITLE": "Table of blood pressure",
-    "PAGES.BUTTONS.SELECT_DATA": "Select Data",
-    "PAGES.BLOOD_PRESSURE.ITEM_NEW.DATA": "Data",
-    "PAGES.BLOOD_PRESSURE.ITEM_NEW.PRESSURE_HEIGHT": "Height Pressure",
-    "PAGES.BLOOD_PRESSURE.ITEM_NEW.PRESSURE_LOW": "Low Pressure",
-    "PAGES.BLOOD_PRESSURE.CHART.TITLE": "Chart",
-    "PAGES.LOGIN.TITLE": "Login",
     "PAGES.REGISTRATION.TITLE": "Registration",
-    "PAGES.REGISTRATION.BUTTONS.REGISTRATION": "SignIn",
-    "PAGES.REGISTRATION.FORM.EMAIL": "Email",
-    "PAGES.REGISTRATION.FORM.LASTNAME": "Last Name",
-    "PAGES.REGISTRATION.FORM.FIRSTNAME": "First Name",
-    "SHARED.BUTTONS.CANCEL": "Close",
-    "SHARED.BUTTONS.SAVE": "Save",
-    "SHARED.BUTTONS.REMOVE": "Remove"
+    "PAGES.NOT_FOUND.TITLE": "Page Not Found",
+    "PAGES.LOGIN.FORGOT_PASSWORD": "Forgot Password",
+    "PAGES.LOGIN.SIGNIN": "Signin",
+    "PAGES.LOGIN.PASSWORD": "Password",
+    "PAGES.LOGIN.EMAIL": "Email",
+    "PAGES.LOGIN.REGISTRATION": "Registration",
+    "SHARED.PHRASES.OR": "or",
+    "PAGES.LOGIN.TITLE": "Login"
 }
