--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,47 +1,25 @@
 {
+    "PAGES.REGISTRATION.REGISTRATION_BUTTON": "",
+    "PAGES.REGISTRATION.TRANSPLANT_ORGAN_DATE": "Дата пересадки",
     "PAGES.SETTINGS.FORM.SELECT_LANGUAGE": "Выберите язык",
-    "PAGES.BUTTONS.SELECT_ONE": "Выберите",
-    "SHARED.BUTTONS.OK": "Ok",
+    "PAGES.BUTTONS.SELECT_ONE": "Выберите Один",
+    "SHARED.BUTTONS.CANCEL": "Отменить",
+    "SHARED.BUTTONS.OK": "Сохранить",
     "PAGES.REGISTRATION.TRANSPLANT_ORGAN": "Пересаженный орган",
-    "PAGES.REGISTRATION.BIRTHDAY": "Дата рождения",
-    "PAGES.REGISTRATION.PHONE": "Телефон",
-    "PAGES.REGISTRATION.CITY": "Город",
-    " PAGES.REGISTRATION.CITY": "Город",
-    "PAGES.REGISTRATION.COUNTRY": "Страна",
-    "PAGES.REGISTRATION.PASSWORD": "Пароль",
     "PAGES.REGISTRATION.CONFIRMATION_PASSWORD": "Подтвердите пароль",
-    " PAGES.REGISTRATION.COUNTRY": "Страна",
+    "PAGES.REGISTRATION.PASSWORD": "Пароль",
     "PAGES.REGISTRATION.LAST_NAME": "Фамилия",
-    "PAGES.LOGIN.SIGNIN": "Регистрация",
-    "PAGES.LOGIN.EMAIL": "Email",
     "PAGES.REGISTRATION.FIRST_NAME": "Имя",
     "PAGES.REGISTRATION.EMAIL": "Email",
     "PAGES.REGISTRATION.LOGIN": "Авторизация",
     "SHARED.WORDS.OR": "или",
-    "PAGES.NOT_FOUND.TITLE": "Страница не найдена",
-    "PAGES.LOGIN.FORGOT_PASSWORD": "Забыли пароль?",
+    "PAGES.REGISTRATION.TITLE": "Регистрация",
+    "PAGES.NOT_FOUND.TITLE": "Страница не существует",
+    "PAGES.LOGIN.FORGOT_PASSWORD": "Забыли пароль",
+    "PAGES.LOGIN.SIGNIN": "Авторизация",
     "PAGES.LOGIN.PASSWORD": "Пароль",
-    " PAGES.LOGIN.EMAIL": "Email",
+    "PAGES.LOGIN.EMAIL": "Email",
     "PAGES.LOGIN.REGISTRATION": "Регистрация",
     "SHARED.PHRASES.OR": "или",
-    "PAGES.BLOOD_PRESSURE.CREATE_PRESSURE": "Добавить новое давление",
-    "PAGES.BLOOD_PRESSURE.CALENDAR": "Данные",
-    "PAGES.BLOOD_PRESSURE.TABLE.DATA": "Дата",
-    "PAGES.BLOOD_PRESSURE.TABLE.HEIGHT_PRESSURE": "Верхнее давление",
-    "PAGES.BLOOD_PRESSURE.TABLE.LOW_PRESSURE": "Нижнее давление",
-    "PAGES.BLOOD_PRESSURE.TABLE.TITLE": "Данные давления",
-    "PAGES.BUTTONS.SELECT_DATA": "Выберите дату",
-    "PAGES.BLOOD_PRESSURE.ITEM_NEW.DATA": "Дата",
-    "PAGES.BLOOD_PRESSURE.ITEM_NEW.PRESSURE_HEIGHT": "Верхнее давление",
-    "PAGES.BLOOD_PRESSURE.ITEM_NEW.PRESSURE_LOW": "Нижнее давление",
-    "PAGES.BLOOD_PRESSURE.CHART.TITLE": "График",
-    "PAGES.LOGIN.TITLE": "Авторизация",
-    "PAGES.REGISTRATION.TITLE": "Регистрация",
-    "PAGES.REGISTRATION.BUTTONS.REGISTRATION": "Зарегистрироваться",
-    "PAGES.REGISTRATION.FORM.EMAIL": "Email",
-    "PAGES.REGISTRATION.FORM.LASTNAME": "Фамилия",
-    "PAGES.REGISTRATION.FORM.FIRSTNAME": "Имя",
-    "SHARED.BUTTONS.CANCEL": "Закрыть",
-    "SHARED.BUTTONS.SAVE": "Сохранить",
-    "SHARED.BUTTONS.REMOVE": "Удалить"
+    "PAGES.LOGIN.TITLE": "Авторизация"
 }
